[project]
name = "dimensional-compression"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shizukani-cp", email = "to.maimai0606@gmail.com" }
]
dependencies = [
    "matplotlib>=3.9.1",
    "gensim==4.3.2",
    "numpy==1.26.4",
    "scipy==1.12.0",
    "smart-open==7.0.4",
    "wrapt==1.16.0",
    "requests>=2.32.3",
    "japanize-matplotlib>=1.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dimensional_compression"]
